--- a/main.html
+++ b/main.html
@@ -4,5 +4,20 @@
   </head>
   <body>
     <!-- Write your code here -->
+	  <form id='form'>
+		  <label for="name">Name:</label><br>
+		  <input id="name" type="text" required><br>
+
+		  <label for="email">Email:</label><br>
+		  <input id="email" type="email" required><br>
+
+		  <label for="password" >Password:</label><br>
+		  <input id="password" type="password" required><br>
+
+		   <label for="confirm-password">Confirm Password:</label><br>
+		  <input id="confirm-password" type="password" required><br>
+
+			<button id='submitBtn' type='submit'>Sign Up</button>														
+	  </form>
   </body>
 </html>
