--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <!-- Write your code here -->
-	  <form id='form'>
+	  <form id='signup-form'>
 		  <label for="name">Name:</label><br>
 		  <input id="name" type="text" required><br>
 
