--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 		   <label for="confirm-password">Confirm Password:</label><br>
 		  <input id="confirm-password" type="password" required><br>
 
-			<button id='submitBtn' type='submit'>Sign Up</button>														
+			<button id='submit' type='submit'>Sign Up</button>														
 	  </form>
   </body>
 </html>
